--- a/my-app-chart/templates/deployment.yaml
+++ b/my-app-chart/templates/deployment.yaml
@@ -40,6 +40,13 @@ spec:
           {{- end }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+
+
+          {{- with .Values.command }}
+          command:
+            {{ - toYaml . | nindent 12 }}
+          {{ - end }}
+
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
