--- a/my-app-chart/values.yaml
+++ b/my-app-chart/values.yaml
@@ -2,8 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 command:
-  - "python"
-  - "app.py"
+  - "sleep"
+  - "infinity"
+
+
+#command:
+#  - "python"
+#  - "app.py"
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 1
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
