--- a/my-app-chart/values.yaml
+++ b/my-app-chart/values.yaml
@@ -2,8 +2,8 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 command:
-  - "sleep"
-  - "infinity"
+  - "python"
+  - "/app.py"
 
 
 #command:
