--- a/argocd.yaml
+++ b/argocd.yaml
@@ -13,7 +13,7 @@ spec:
   # Where to get the YAML files from
 
   source:
-    repoURL: 'https://github.com/ronaelshef3/quakeWatch1.git'
+    repoURL: 'https://github.com/ronaelshef3/GITops'
     # עדכן את הנתיב לתיקייה הספציפית של ה-Chart
     path: 'my-app-chart'
     targetRevision: HEAD
